--- a/Klike/Sources/Controllers/KLLoginViewController.xib
+++ b/Klike/Sources/Controllers/KLLoginViewController.xib
@@ -18,7 +18,7 @@
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pok-Ih-FNc">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="400"/>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="0.19817504286766052" green="0.20147910714149475" blue="0.2836739718914032" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="400" id="DmK-7D-Doz"/>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="400" id="FMA-7S-aCh"/>
@@ -103,7 +103,7 @@
                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                             <inset key="titleEdgeInsets" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
                             <state key="normal" title="Mobile number">
-                                <color key="titleColor" red="0.45882352941176469" green="0.46666666666666667" blue="0.8784313725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="titleColor" red="0.53333333333333333" green="0.54117647058823526" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                             <connections>
@@ -112,9 +112,11 @@
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pmi-Zj-jbf">
                             <rect key="frame" x="16" y="48" width="568" height="2"/>
-                            <color key="backgroundColor" red="0.45882352941176469" green="0.46666666666666667" blue="0.8784313725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="backgroundColor" red="0.45882352941176469" green="0.46666666666666667" blue="0.8784313725490196" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="2" id="DuN-6N-4o6"/>
+                                <constraint firstAttribute="height" constant="2" id="DuN-6N-4o6">
+                                    <variation key="widthClass=compact" constant="1"/>
+                                </constraint>
                             </constraints>
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oNp-ts-Lnz">
@@ -126,7 +128,7 @@
                                 <attributedString key="attributedTitle">
                                     <fragment content="By signing up I agree with the">
                                         <attributes>
-                                            <color key="NSColor" red="0.44705882352941179" green="0.45098039215686275" blue="0.87058823529411766" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <color key="NSColor" red="0.45882352941176469" green="0.46666666666666667" blue="0.8784313725490196" alpha="1" colorSpace="calibratedRGB"/>
                                             <font key="NSFont" size="11" name="HelveticaNeue"/>
                                             <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural"/>
                                         </attributes>
@@ -157,10 +159,13 @@
                                     <include reference="OGk-I3-N8h"/>
                                 </mask>
                             </variation>
+                            <connections>
+                                <action selector="onTerms:" destination="-1" eventType="touchUpInside" id="pno-hu-pAx"/>
+                            </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9gZ-5Z-O5m">
                             <rect key="frame" x="-23" y="-15" width="46" height="30"/>
-                            <color key="backgroundColor" red="0.39215686274509803" green="0.40000000000000002" blue="0.792156862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="backgroundColor" red="0.39215686274509803" green="0.40000000000000002" blue="0.792156862745098" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="56" id="zYO-9F-Qo0"/>
                             </constraints>
@@ -184,7 +189,7 @@
                             </connections>
                         </button>
                     </subviews>
-                    <color key="backgroundColor" red="0.34901960784313724" green="0.35294117647058826" blue="0.74117647058823533" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="backgroundColor" red="0.34901960784313724" green="0.35686274509803922" blue="0.75686274509803919" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="bottom" secondItem="AQW-fj-NY4" secondAttribute="bottom" constant="145" id="01c-6o-VtU"/>
                         <constraint firstAttribute="trailing" secondItem="9gZ-5Z-O5m" secondAttribute="trailing" id="0OO-2f-Oj8"/>
@@ -273,7 +278,7 @@
                     </variation>
                 </view>
             </subviews>
-            <color key="backgroundColor" red="0.14901960784313725" green="0.14901960784313725" blue="0.2196078431372549" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.34901960784313724" green="0.35686274509803922" blue="0.75686274509803919" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="Pok-Ih-FNc" secondAttribute="trailing" id="CQe-25-l50"/>
                 <constraint firstItem="i64-uT-yg5" firstAttribute="top" secondItem="Pok-Ih-FNc" secondAttribute="bottom" id="MAC-mg-TEd"/>
@@ -284,7 +289,7 @@
                 <constraint firstItem="Pok-Ih-FNc" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="vPi-iD-L7w"/>
             </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
-            <point key="canvasLocation" x="545" y="620"/>
+            <point key="canvasLocation" x="454" y="523"/>
         </view>
     </objects>
     <resources>
